k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pantry-bot
spec:
  type: ClusterIP
  selector:
    app: pantry-bot
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
